checkers/tests/igj/Assignability.out
Assignability.java:70: error: (assignability.invalid)
Assignability.java:71: error: (assignability.invalid)
Assignability.java:72: error: (assignability.invalid)
Assignability.java:73: error: (assignability.invalid)
Assignability.java:74: error: (assignability.invalid)
Assignability.java:75: error: (assignability.invalid)
Assignability.java:76: error: (assignability.invalid)
Assignability.java:77: error: (assignability.invalid)
Assignability.java:78: error: (assignability.invalid)
Assignability.java:90: error: (assignability.invalid)
Assignability.java:91: error: (assignability.invalid)
Assignability.java:92: error: (assignability.invalid)
Assignability.java:93: error: (assignability.invalid)
Assignability.java:94: error: (assignability.invalid)
Assignability.java:95: error: (assignability.invalid)
Assignability.java:96: error: (assignability.invalid)
Assignability.java:97: error: (assignability.invalid)
Assignability.java:98: error: (assignability.invalid)
Assignability.java:111: error: (assignability.invalid)
Assignability.java:112: error: (assignability.invalid)
Assignability.java:113: error: (assignability.invalid)
Assignability.java:114: error: (assignability.invalid)
Assignability.java:115: error: (assignability.invalid)
Assignability.java:116: error: (assignability.invalid)
Assignability.java:117: error: (assignability.invalid)
Assignability.java:118: error: (assignability.invalid)
Assignability.java:119: error: (assignability.invalid)
Assignability.java:121: error: (assignability.invalid)
Assignability.java:122: error: (assignability.invalid)
Assignability.java:123: error: (assignability.invalid)
Assignability.java:124: error: (assignability.invalid)
Assignability.java:125: error: (assignability.invalid)
Assignability.java:126: error: (assignability.invalid)
Assignability.java:127: error: (assignability.invalid)
Assignability.java:128: error: (assignability.invalid)
Assignability.java:129: error: (assignability.invalid)
Assignability.java:172: error: (assignability.invalid)
Assignability.java:173: error: (assignability.invalid)
Assignability.java:174: error: (assignability.invalid)
Assignability.java:175: error: (assignability.invalid)
Assignability.java:176: error: (assignability.invalid)
Assignability.java:177: error: (assignability.invalid)
Assignability.java:178: error: (assignability.invalid)
Assignability.java:179: error: (assignability.invalid)
Assignability.java:180: error: (assignability.invalid)
Assignability.java:192: error: (assignability.invalid)
Assignability.java:193: error: (assignability.invalid)
Assignability.java:194: error: (assignability.invalid)
Assignability.java:195: error: (assignability.invalid)
Assignability.java:196: error: (assignability.invalid)
Assignability.java:197: error: (assignability.invalid)
Assignability.java:198: error: (assignability.invalid)
Assignability.java:199: error: (assignability.invalid)
Assignability.java:200: error: (assignability.invalid)
Assignability.java:275: error: (assignability.invalid)
Assignability.java:276: error: (assignability.invalid)
Assignability.java:277: error: (assignability.invalid)
Assignability.java:278: error: (assignability.invalid)
Assignability.java:279: error: (assignability.invalid)
Assignability.java:280: error: (assignability.invalid)
Assignability.java:281: error: (assignability.invalid)
Assignability.java:282: error: (assignability.invalid)
Assignability.java:283: error: (assignability.invalid)
Assignability.java:295: error: (assignability.invalid)
Assignability.java:296: error: (assignability.invalid)
Assignability.java:297: error: (assignability.invalid)
Assignability.java:298: error: (assignability.invalid)
Assignability.java:299: error: (assignability.invalid)
Assignability.java:300: error: (assignability.invalid)
Assignability.java:301: error: (assignability.invalid)
Assignability.java:302: error: (assignability.invalid)
Assignability.java:303: error: (assignability.invalid)
Assignability.java:318: error: (assignability.invalid)
Assignability.java:319: error: (assignability.invalid)
Assignability.java:320: error: (assignability.invalid)
Assignability.java:321: error: (assignability.invalid)
Assignability.java:322: error: (assignability.invalid)
Assignability.java:323: error: (assignability.invalid)
Assignability.java:324: error: (assignability.invalid)
Assignability.java:325: error: (assignability.invalid)
Assignability.java:326: error: (assignability.invalid)
Assignability.java:328: error: (assignability.invalid)
Assignability.java:329: error: (assignability.invalid)
Assignability.java:330: error: (assignability.invalid)
Assignability.java:331: error: (assignability.invalid)
Assignability.java:332: error: (assignability.invalid)
Assignability.java:333: error: (assignability.invalid)
Assignability.java:334: error: (assignability.invalid)
Assignability.java:335: error: (assignability.invalid)
Assignability.java:336: error: (assignability.invalid)
Assignability.java:379: error: (assignability.invalid)
Assignability.java:380: error: (assignability.invalid)
Assignability.java:381: error: (assignability.invalid)
Assignability.java:382: error: (assignability.invalid)
Assignability.java:383: error: (assignability.invalid)
Assignability.java:384: error: (assignability.invalid)
Assignability.java:385: error: (assignability.invalid)
Assignability.java:386: error: (assignability.invalid)
Assignability.java:387: error: (assignability.invalid)
Assignability.java:399: error: (assignability.invalid)
Assignability.java:400: error: (assignability.invalid)
Assignability.java:401: error: (assignability.invalid)
Assignability.java:402: error: (assignability.invalid)
Assignability.java:403: error: (assignability.invalid)
Assignability.java:404: error: (assignability.invalid)
Assignability.java:405: error: (assignability.invalid)
Assignability.java:406: error: (assignability.invalid)
Assignability.java:407: error: (assignability.invalid)
Assignability.java:482: error: (assignability.invalid)
Assignability.java:483: error: (assignability.invalid)
Assignability.java:484: error: (assignability.invalid)
Assignability.java:485: error: (assignability.invalid)
Assignability.java:486: error: (assignability.invalid)
Assignability.java:487: error: (assignability.invalid)
Assignability.java:488: error: (assignability.invalid)
Assignability.java:489: error: (assignability.invalid)
Assignability.java:490: error: (assignability.invalid)
Assignability.java:502: error: (assignability.invalid)
Assignability.java:503: error: (assignability.invalid)
Assignability.java:504: error: (assignability.invalid)
Assignability.java:505: error: (assignability.invalid)
Assignability.java:506: error: (assignability.invalid)
Assignability.java:507: error: (assignability.invalid)
Assignability.java:508: error: (assignability.invalid)
Assignability.java:509: error: (assignability.invalid)
Assignability.java:510: error: (assignability.invalid)
